2011-04-19 Sarka Todorova <sarka.todorova@cern.ch>
	* cleaning MsgSvc->ATH_MSG ( AlgTool->AthAlgTool )
	* tagged as MuonTrackingGeometry-00-05-34

2011-03-01 Sarka Todorova <sarka.todorova@cern.ch>
	* Scott Snyder's fix for blended material (->reproducibility )
	* warning messages in MSTB->debug level  
	* tagged as MuonTrackingGeometry-00-05-33

2010-05-11 Felix Rauscher <rauscher@cern.ch>
	* fix checkreq warnings
	* fix compiler warnings
	* tagging MuonTrackingGeometry-00-05-32

2010-10-19 Andreas Salzburger <Andreas.Salzburger -at- cern.ch >
	* update to new CMT version
	* tagged as MuonTrackingGeometry-00-05-31

2010-01-04 Sarka Todorova <sarka.todorova@cern.ch>
	* reshuffle printout (DEBUG->VERBOSE)
	* tagged as MuonTrackingGeometry-00-05-30

2009-11-11 Sarka Todorova <sarka.todorova@cern.ch>
	* new TGC station taken into account in identification
	* tagged as MuonTrackingGeometry-00-05-29

2009-10-08 Sarka Todorova <sarka.todorova@cern.ch>
	* pass constituents info only if needed ( for blending )
        * fix span 
	* tagged as MuonTrackingGeometry-00-05-28

2009-10-05 Sarka Todorova <sarka.todorova@cern.ch>
	* simplify constituent info for DetachedTV
	* distinguish cutouts and overlaps
	* don't simplify poorly scanned shapes
        * fix span in blend material
	* tagged as MuonTrackingGeometry-00-05-27

2009-10-02 Sarka Todorova <sarka.todorova@cern.ch>
	* adjust envelope size
	* tagged as MuonTrackingGeometry-00-05-26

2009-09-30 Sarka Todorova <sarka.todorova@cern.ch>
	* shield material fixed (span regions)
	* tagged as MuonTrackingGeometry-00-05-25

2009-08-31 Sarka Todorova <sarka.todorova@cern.ch>
	* correct typo in 64-bit id
	* tagged as MuonTrackingGeometry-00-05-24

2009-08-30  RD Schaffer  <R.D.Schaffer@cern.ch>

	* tagged as MuonTrackingGeometry-00-05-23
	* src/MuonStationBuilder.cxx: added fixes for moving to 64-bit ids

2009-07-27 Sarka Todorova <sarka.todorova@cern.ch>
	* fix unidentified RPC layers