@@ -1,3 +1,7 @@
+2011-04-29 Sarka Todorova <sarka.todorova@cern.ch>
+	* error message in case invalid TGC channel is accessed
+	* tagged as MuonTrackingGeometry-00-05-35
+
 2011-04-19 Sarka Todorova <sarka.todorova@cern.ch>
 	* cleaning MsgSvc->ATH_MSG ( AlgTool->AthAlgTool )
 	* tagged as MuonTrackingGeometry-00-05-34
